--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <filter>
+        <description>
+        </description>
+        <filter-name>SortNumbers</filter-name>
+        <filter-class>com.example.zad2.filters.Filter3</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SortNumbers</filter-name>
+        <url-pattern>/add</url-pattern>
+    </filter-mapping>
+    <listener>
+        <listener-class>com.example.zad2.RequestListener</listener-class>
+    </listener>
 </web-app>
